# dq_copilot

./: .gitignore  README.md  descripiton.txt  dq_copilot_summary.txt  pyproject.toml  test_generator.txt
dq_copilot/: __init__.py  cli.py
dq_copilot/agents/: __init__.py  anomaly_detector.py  profiler.py  report_renderer.py  table_loader.py  test_generator.py  yaml_generator.py
examples/: emea_order_line.csv  orders.csv
